--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<script type="text/template" id="item-template">
 			<div class="view">
 				<input class="toggle" type="checkbox" <%= completed ? 'checked' : '' %>>
-				<label><%- title %><%= completed ? ' -- done' : '' %></label>
+				<label><%- title %><%= completed ? ' -- done' : '' %><button class="edit-btn"></button></label>
 				<button class="destroy"></button>
 			</div>
 			<input class="edit" value="<%- title %>">
